some fixes for running with java 5